# affyio

./: DESCRIPTION  HISTORY  NAMESPACE  aclocal.m4  configure  configure.in
R/: get.celfile.dates.R  internal_functions.R  read.celfile.R  read.celfile.header.R  read.probematrices.R  read_abatch.R
man/: affyio-internal.Rd  get.celfile.dates.Rd  read.celfile.Rd  read.celfile.probeintensity.matrices.Rd  read_abatch.Rd
src/: Makevars.win  fread_functions.c  fread_functions.h  init_package.c  read_abatch.c  read_abatch.h  read_bpmap.c  read_cdf_xda.c  read_cdffile2.c  read_celfile_generic.c  read_celfile_generic.h  read_clf.c  read_generic.c  read_generic.h  read_multichannel_celfile_generic.c  read_multichannel_celfile_generic.h  read_pgf.c
